
* bug fix
  * The "componentload" event now gets fired after a component is dynamically loaded. The handler receives the instance of the loaded component.
  * Feedback does not insert a new div every time being called
  * JS class caching was broken for name-scoped classes

= v0.6.4 - 2010-11-05
* enhancements
  * Implemented Netzke.isLoading(), useful for testing
  * Persistence support

* API change
  * +endpoint+ DSL call now results in a method called <endpoint_name>_endpoint, _not_ just <endpoint_name> (beware when overriding endpoint definitions, or calling endpoint methods on child components)
  * Using +api+ for endpoint declaration is gone

= v0.6.3 - 2010-11-02
* The +ext_config+ option is back, deprecated.

= v0.6.2 - 2010-10-27
* Introduced the Symbol#component method to declare components in the config (instead of now deprecated js_component).

= v0.6.1 - 2010-10-26
* Disabled buggy implementation of rendering on-page JS classes in netzke.js instead of main page.

= v0.6.0 - 2010-10-24
* Rails3 compatibility, thorough rewrite
* Much more thorough testing

* API backward incompatibility
  * +ext_config+ config level is removed; put all that configuration in the top level
  * mentioning actions in the +bbar+, +tbar+, etc, should be explicit, e.g.:

      :bbar => [:apply.action, :delete.action]

  * +late_aggregatee+ is now +lazy_loading+
  * +aggregatees+ are now +components+
  * +widgets+ are now +components+, too
  * +api+ is now +endpoint+
  * +persistent_config_enabled?+ is now +persistence_enabled?+
  * Using the +js_extend_properties+ class method in your components in deprecated (and maybe even broken). Use +js_property+ (or +js_properties+) and +js_method+ instead (see multiple examples in test/rails_app)
  * the +load_component_with_cache+ endpoint renamed to +deliver_component+

* New
  * +ext+ helper in the views to embed any (pure) Ext component into a view
  * +component+ DSL method to declare child components